Updated home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Home</title>
 </head>
 <body style="background:red">
-    Hello World!
+    Hello World! <br/>
+    From Git Demo Inc.
 </body>
 </html>
