--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
-<body style="background:red">
+<body style="background-color:red">
     Hello World! <br/>
     From Git Demo Inc.
     1st Feb 2021
     <p>
         Summary Page
+        Contributors:
+        - Alpha
+        - Beta
+        - Charlie
     </p>
 </body>
 </html>
