--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <p>
         Summary Page
         Contributors:
-        - Alpha
-        - Beta
-        - Charlie
+        <ul>
+            <li>Alpha</li>
+            <li>Beta</li>
+            <li>Charlie</li>
+            <li>Delta</li>
     </p>
 </body>
 </html>
