--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li>Alpha</li>
             <li>Beta</li>
             <li>Charlie</li>
-            <li>Delta</li>
+            <li>Delta2</li>
         </ul>    
     </p>
 </body>
