Updated contributors name

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <ul>
             <li>Alpha</li>
             <li>Beta</li>
-            <li>Charlie</li>
-            <li>Delta2</li>
+            <li>Charlie2</li>
+            <li>Delta3</li>
         </ul>    
     </p>
 </body>
