Added section for dev changes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         1. ABC
         2. PQR
         3. XYZ
+        Dev changes:
+        <ul>
+            <li>One</li>
+            <li>Two</li>
+        </ul>
     </p>
 </body>
 </html>
