Added section for dev changes

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
             <li>Delta3</li>
         </ul>    
     </p>
+    <p>
+        Dev changes:
+        <ul>
+            <li>One</li>
+            <li>Two</li>
+        </ul>
+    </p>
 </body>
 </html>
