--- a/index.html
+++ b/index.html
@@ -22,5 +22,11 @@
     <p>
         Misc section
     </p>
+    <p>
+        References:
+        1. ABC
+        2. PQR
+        3. XYZ
+    </p>
 </body>
 </html>
