--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li>One</li>
             <li>Two</li>
             <li>Three</li>
+            <li>Four</li>
         </ul>
     </p>
 </body>
