Reset home page

--- a/index.html
+++ b/index.html
@@ -5,36 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
-<body style="background-color:red">
-    Hello World! <br/>
-    From Git Demo Inc.
-    1st Feb 2021
-    <p>
-        Summary Page
-        Contributors:
-        <ul>
-            <li>Alpha</li>
-            <li>Beta</li>
-            <li>Charlie2</li>
-            <li>Delta3</li>
-        </ul>    
-    </p>
-    <p>
-        Misc section
-    </p>
-    <p>
-        References:
-        1. ABC
-        2. PQR
-        3. XYZ
-        Dev changes:
-        <ul>
-            <li>One</li>
-            <li>Two</li>
-            <li>Three</li>
-            <li>Four</li>
-            <li>Five</li>
-        </ul>
-    </p>
+<body>
+    Hello World!
 </body>
 </html>
